# cr-agent

./: .env.example  .gitignore  Dockerfile  README.md  cr_agent.db  docker-compose.yml  input.patch  pyproject.toml  real.patch
docs/: code-review-agent-design.md  implementation-guide.md
frontend/: index.html  package-lock.json
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: Dashboard.vue  ReviewDetail.vue  ReviewList.vue
src/cr_agent/: __init__.py  cli.py  config.py  main.py
src/cr_agent/agents/: __init__.py  base.py  logic.py  performance.py  security.py  style.py  tool_agent.py
src/cr_agent/api/: deps.py
src/cr_agent/api/routes/: health.py  review.py  webhook.py
src/cr_agent/core/: __init__.py  context_builder.py  diff_parser.py  file_filter.py  orchestrator.py  report_builder.py
src/cr_agent/integrations/: github.py  github_auth.py
src/cr_agent/llm/: __init__.py  client.py  cost_tracker.py  schema.py  tools.py
src/cr_agent/storage/: database.py  models.py
src/cr_agent/templates/: base.html
src/cr_agent/worker/: tasks.py
tests/eval/: metrics.py  run_eval.py
tests/eval/dataset/: 001_sql_injection.json  002_hardcoded_secret.json  003_command_injection.json  004_path_traversal.json  005_null_pointer.json  006_bare_except.json  007_n1_query.json  008_resource_leak.json  009_magic_number.json  010_long_function.json  011_clean_refactor.json  012_clean_docs.json  013_clean_test.json  014_mixed_issues.json  015_blocking_in_async.json
tests/fixtures/: sample.patch
tests/integration/: test_full_review_flow.py
tests/unit/: test_diff_parser.py  test_llm_client.py  test_orchestrator.py
tests/unit/test_agents/: test_all_agents.py  test_security.py
